stops title wrapping, ellipsis will not work as requires known width

--- a/src/client/common/container/container.scss
+++ b/src/client/common/container/container.scss
@@ -23,7 +23,8 @@
   .title-bar {
     background: $mid-grey;
     color: $white;
-    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
     cursor: pointer;
 
     &:hover,
